Fixed alignment of portlet icons.
git-svn-id: svn://svn.liferay.com/repos/public/plugins/trunk@21030 05bdf26c-840f-0410-9ced-eb539d925f36

--- a/themes/rock-blog-theme/docroot/_diffs/css/custom.css
+++ b/themes/rock-blog-theme/docroot/_diffs/css/custom.css
@@ -96,7 +96,8 @@ body {
 }
 
 .portlet-icons {
-	line-height: 0;
+	font-size: 10px;
+	line-height: 1.6em;
 	top: 12px;
 }
 
