--- a/themes/street-style-theme/docroot/_diffs/css/custom.css
+++ b/themes/street-style-theme/docroot/_diffs/css/custom.css
@@ -106,6 +106,11 @@ body {
 	padding: 6px 8px;
 }
 
+.portlet-icons {
+	font-size: 10px;
+	line-height: 1.6em;
+}
+
 
 /* ---------- Tabs ---------- */
 
