--- a/themes/summer-breeze-theme/docroot/_diffs/css/custom.css
+++ b/themes/summer-breeze-theme/docroot/_diffs/css/custom.css
@@ -99,6 +99,11 @@ body {
 	line-height: 2em;
 }
 
+.portlet-icons {
+	font-size: 10px;
+	line-height: 1.6em;
+}
+
 
 /* ---------- Tabs ---------- */
 
