--- a/themes/transparentia-theme/docroot/_diffs/css/custom.css
+++ b/themes/transparentia-theme/docroot/_diffs/css/custom.css
@@ -1,4 +1,7 @@
-/* Global */
+
+
+/* ---------- Base ---------- */
+
 #banner .logo a {
 	color: #FFF;
 	font: normal 2em Verdana, sans-serif;
@@ -47,12 +50,14 @@ html {
 	width: 1180px;
 }
 
-/* Forms */
+
+/* ---------- Forms ---------- */
+
 input[type="text"], input[type="password"], input[type="file"], input[type="submit"], input[type="button"], input[type="reset"], select, textarea, .textarea {
 	padding: 1px 1px;
 }
 
-/* Navigation */
+/* ---------- Navigation ---------- */
 .js #add-page {
 	background: #E5E5E5;
 	right: 0;
@@ -143,46 +148,14 @@ input[type="text"], input[type="password"], input[type="file"], input[type="subm
 	width: 200px;
 }
 
-/* Dock
-.js .interactive-mode h2 span {
-	border: none;
-}
-
-.js .interactive-mode h2 {
-	background: transparent;
-}
-
-.js .interactive-mode {
-	background: transparent;
-}
-
-.js .lfr-dock.interactive-mode h2 span {
-	color: #222;
-	font-size: 10pt;
-	padding: 8px 16px 16px 16px;
-}
-*/
-
 .js .lfr-dock.interactive-mode {
 	right: 5pt;
 	top: 5px;
 	min-width: 0;
 }
 
-/* Portlet */
-.portlet-content {
-	font-size: 1.2em;
-	padding-bottom: 1.2em;
-}
 
-.portlet-title {
-	color: #367EA6;
-	padding-top: 6px;
-}
-
-#portlet-wrapper- {
-	width: 728px;
-}
+/* ---------- Portlet ---------- */
 
 .portlet {
 	background: #FFF;
@@ -191,7 +164,28 @@ input[type="text"], input[type="password"], input[type="file"], input[type="subm
 	padding: 6px 12px;
 }
 
-/* Liferay UI */
+.portlet-title {
+	color: #367EA6;
+	padding-top: 6px;
+}
+
+.portlet-icons {
+	font-size: 10px;
+	line-height: 1.6em;
+}
+
+.portlet-content {
+	font-size: 1.2em;
+	padding-bottom: 1.2em;
+}
+
+#portlet-wrapper- {
+	width: 728px;
+}
+
+
+/* ---------- Liferay UI ---------- */
+
 .tabs, .liferay-table, .portlet-section-body td {
 	font-size: 10px;
 }
